--- a/load.html
+++ b/load.html
@@ -26,6 +26,7 @@
 <script src="webgl/WebGL.js"></script>
 <script src="webgl/program-manager.js"></script>
 <script src="webgl/webgl-context.js"></script>
+<script src="webgl/ops/batch-normalization.js"></script>
 <script src="webgl/ops/activation.js"></script>
 <script src="webgl/ops/sum.js"></script>
 <script src="webgl/ops/upsample.js"></script>
