--- a/load.html
+++ b/load.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <body>
@@ -138,7 +139,7 @@
     try {
       console.log(loadWeight)
       // WasmBinding.getInstance().dispose()
-      await backend.run(imageLoader.pixels)
+      await backend.run(imageLoader.pixels, 768, 576)
       const img = new ImageProcess()
       const dets = img.get_network_boxes(backend.layers, 1, 1, 0.2, 0, 0);
       console.log(dets)
