--- a/load.html
+++ b/load.html
@@ -11,8 +11,10 @@
 </body>
 <script type="module">
   import createLayers from './src/network.js'
-  import {layersForward} from './src/cpu.js'
-  import {ImageLoader,ImageProcess} from './ImageProcess.js'
+  import { layersForward } from './src/cpu.js'
+  import { layersWebGL } from './src/webgl.js'
+  import { WebGL } from './src/webgl/WebGL.js'
+  import { ImageLoader, ImageProcess } from './ImageProcess.js'
   const imageLoader = new ImageLoader(768, 576, false);
   var loadWeight = false
   var loadModel = null
@@ -97,11 +99,14 @@
       const blb = await readUploadedBlob(blob)
       const weights = new DataView(blb);
       loadModel = createLayers(fileContents, weights, false)
-      for(let i=1;i<loadModel.length;i++)
+      loadModel[0].webgl = new WebGL('webgl2')
+      for (let i = 1; i < loadModel.length; i++) {
         loadModel[i].forward = layersForward[loadModel[i].type]
+        layersWebGL[loadModel[i].type](loadModel[0].webgl, loadModel[i])
+      }
       console.log(loadModel)
-       await imageLoader.getImageData('./dog.jpg');
-       document.getElementById("file-content").appendChild(imageLoader.canvas)
+      await imageLoader.getImageData('./dog.jpg');
+      document.getElementById("file-content").appendChild(imageLoader.canvas)
     } catch (e) {
       console.log(e)
       fileContentDiv.innerHTML = e.message;
@@ -142,8 +147,28 @@
     loadModel[0].output = ImageProcess.resize_image(img, loadModel[0].out_w, loadModel[0].out_h, width, height, channels, loadModel[0].quant)
     //for(let i=0;i<loadModel[0].output.length;i++)loadModel[0].output[i] = 0
     console.time()
-    for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
+    //for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
+    forwardWebgl(loadModel)
     console.timeEnd()
+  }
+  function forwardWebglYolo(layers) {
+    const l = this
+    const len = layers[l.index - 1].runData.length
+    l.output = layers[l.index - 1].runData[len - 1].outputTextureData.gldata()
+  }
+  function forwardWebgl(layers) {
+    layers[0].webgl.initFirstTexture(layers[1].runData[0].inputTextureDatas[0], layers[0].output)
+    for (let i = 1; i < layers.length; i++) {
+      const l = layers[i]
+      if (l.type == "YOLO") {
+        //l.output = layers[i - 1].runData[1].outputTextureData.gldata()
+        continue
+      }
+      for (let j = 0; j < l.artifacts.length; j++) {
+        layers[0].webgl.programManager.run(l.artifacts[j], l.runData[j]);
+        //l.output = l.runData[j].outputTextureData.gldata()
+      }
+    }
   }
   document.querySelector('input#primary-file-upload').addEventListener('change', handleUploadWeight);
   document.getElementById('start').addEventListener('click', handleSt);
