--- a/load.html
+++ b/load.html
@@ -147,8 +147,8 @@
     loadModel[0].output = ImageProcess.resize_image(img, loadModel[0].out_w, loadModel[0].out_h, width, height, channels, loadModel[0].quant)
     //for(let i=0;i<loadModel[0].output.length;i++)loadModel[0].output[i] = 0
     console.time()
-    for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
-    //forwardWebgl(loadModel)
+    //for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
+    forwardWebgl(loadModel)
     console.timeEnd()
   }
   function forwardWebgl(layers) {
@@ -156,12 +156,13 @@
     for (let i = 1; i < layers.length; i++) {
       const l = layers[i]
       if (l.type == "YOLO") {
-        l.output = layers[i - 1].runData[1].outputTextureData.gldata()
+       // l.output = layers[i - 1].runData[1].outputTextureData.gldata()
         continue
       }
       for (let j = 0; j < l.artifacts.length; j++) {
+        //layers[0].webgl.programManager.run(l.artifacts[j], layers[0].webgl.getTextureData(l.textures[j].TextureID));
         layers[0].webgl.programManager.run(l.artifacts[j], l.runData[j]);
-        l.output = l.runData[j].outputTextureData.gldata()
+        //l.output = l.runData[j].outputTextureData.gldata()
       }
     }
   }
