--- a/load.html
+++ b/load.html
@@ -102,7 +102,7 @@
       loadModel[0].webgl = new WebGL('webgl2')
       for (let i = 1; i < loadModel.length; i++) {
         loadModel[i].forward = layersForward[loadModel[i].type]
-        layersWebGL[loadModel[i].type](loadModel[0].webgl, loadModel[i])
+        //layersWebGL[loadModel[i].type](loadModel[0].webgl, loadModel[i])
       }
       console.log(loadModel)
       await imageLoader.getImageData('./dog.jpg');
@@ -147,8 +147,8 @@
     loadModel[0].output = ImageProcess.resize_image(img, loadModel[0].out_w, loadModel[0].out_h, width, height, channels, loadModel[0].quant)
     //for(let i=0;i<loadModel[0].output.length;i++)loadModel[0].output[i] = 0
     console.time()
-    //for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
-    forwardWebgl(loadModel)
+    for (let i = 1; i < loadModel.length; ++i)await loadModel[i].forward(loadModel)
+    //forwardWebgl(loadModel)
     console.timeEnd()
   }
   function forwardWebgl(layers) {
@@ -156,7 +156,7 @@
     for (let i = 1; i < layers.length; i++) {
       const l = layers[i]
       if (l.type == "YOLO") {
-       // l.output = layers[i - 1].runData[1].outputTextureData.gldata()
+        l.outputGl = layers[i - 1].runData[1].outputTextureData
         continue
       }
       for (let j = 0; j < l.artifacts.length; j++) {
